--- a/examples/blog/package.json
+++ b/examples/blog/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next-lite dev",
-    "build": "next-lite build",
-    "start": "next-lite start"
+    "dev": "node ../../scripts/example-dev.js blog",
+    "build": "node ../../scripts/build.js",
+    "start": "node ../../scripts/prod-server.js"
   },
   "dependencies": {
-    "next-lite-framework": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "esbuild": "^0.19.11",
+    "fs-extra": "^11.2.0",
+    "ws": "^8.16.0"
   }
 }
