--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
   },
   "homepage": "https://github.com/teckmill/next-lite-main#readme",
   "dependencies": {
+    "@flash-install/cli": "^1.3.4",
     "@types/fs-extra": "^11.0.4",
     "esbuild": "0.17.19",
     "fs-extra": "^11.2.0",
+    "next-lite-framework": "^0.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ws": "^8.18.0"
