--- a/package.json
+++ b/package.json
@@ -1,34 +1,15 @@
 {
   "name": "next-lite-framework",
   "version": "0.2.0",
-  "description": "A lightweight, high-performance alternative to Next.js",
+  "description": "A lightweight alternative to Next.js",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "build": "node scripts/build.js",
-    "dev": "node scripts/dev.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "react",
-    "nextjs",
     "framework"
   ],
   "author": "Teck",
-  "license": "MIT",
-  "dependencies": {
-    "esbuild": "0.17.19",
-    "fs-extra": "11.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "ws": "8.18.0"
-  },
-  "devDependencies": {
-    "@types/fs-extra": "11.0.4",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.0",
-    "jest": "29.7.0",
-    "postcss": "8.4.49",
-    "postcss-modules": "6.0.1",
-    "typescript": "5.0.4"
-  }
+  "license": "MIT"
 }
