--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "postcss": "8.4.49",
     "postcss-modules": "6.0.1",
     "typescript": "5.0.4"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
