--- a/package.json
+++ b/package.json
@@ -4,33 +4,13 @@
   "description": "A lightweight alternative to Next.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"No tests specified\"",
-    "build": "node scripts/build.js",
-    "dev": "node scripts/dev.js"
+    "test": "echo \"No tests specified\" && exit 0",
+    "build": "echo \"No build specified\" && exit 0"
   },
   "keywords": [
     "react",
     "framework"
   ],
   "author": "Teck",
-  "license": "MIT",
-  "dependencies": {
-    "esbuild": "0.17.19",
-    "fs-extra": "11.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "ws": "8.18.0"
-  },
-  "devDependencies": {
-    "@types/fs-extra": "11.0.4",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.0",
-    "jest": "29.7.0",
-    "postcss": "8.4.49",
-    "postcss-modules": "6.0.1",
-    "typescript": "5.0.4"
-  },
-  "engines": {
-    "node": ">=14.0.0"
-  }
+  "license": "MIT"
 }
