--- a/package.json
+++ b/package.json
@@ -46,9 +46,12 @@
     "@types/react-dom": "^19.1.2",
     "babel-jest": "^29.7.0",
     "esbuild": "^0.17.18",
+    "fs-extra": "^11.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.5.3",
+    "postcss-modules": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-jest": "^29.1.2"
