--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "homepage": "https://github.com/Nom-nom-hub/next-lite-main#readme",
   "dependencies": {
-    "canvas": "^2.11.0"
+    "canvas": "^2.11.0",
+    "dotenv": "^16.5.0"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
