Update package dependencies in package.json and package-lock.json, including chokidar, express, react-router-dom, and ws. Bump versions for next-lite-framework and create-next-lite-app to 0.6.0 and 0.4.0 respectively. Enhance error handling in ErrorBoundary component and improve dynamic import functionality. Update tsconfig.json for better path resolution and modify CI workflow to handle NPM token securely.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,7 +86,7 @@ jobs:
       if: steps.check_token.outputs.has_token == 'true' && steps.check_version.outputs.version_changed == 'true'
       run: npm publish
       env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN || '' }}
 
     - name: Skip publishing (no version change)
       if: steps.check_token.outputs.has_token == 'true' && steps.check_version.outputs.version_changed != 'true'
