--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
   "homepage": "https://github.com/Nom-nom-hub/next-lite-main#readme",
   "dependencies": {
     "canvas": "^2.11.0",
-    "dotenv": "^16.5.0"
+    "chokidar": "^3.5.3",
+    "dotenv": "^16.5.0",
+    "express": "^4.18.2",
+    "react-router-dom": "^6.10.0",
+    "ws": "^8.13.0"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
