--- a/packages/create-next-lite-app/package.json
+++ b/packages/create-next-lite-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-next-lite-app",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Create Next-Lite apps with one command",
   "main": "index.js",
   "bin": {
@@ -12,7 +12,8 @@
     "templates"
   ],
   "scripts": {
-    "test": "echo \"No tests specified\" && exit 0"
+    "test": "echo \"No tests specified\" && exit 0",
+    "build": "echo 'No build step required for this package'"
   },
   "keywords": [
     "next-lite",
