--- a/packages/next-lite-examples/blog/package.json
+++ b/packages/next-lite-examples/blog/package.json
@@ -8,7 +8,7 @@
     "start": "next-lite start"
   },
   "dependencies": {
-    "next-lite-framework": "0.1.0",
+    "next-lite-framework": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
